tests/ui/fail/write_unit_escape_hatch.stderr
error[E0599]: no method named `session_mut` found for struct `WriteUnitOfWork<'a>` in the current scope
 --> tests/ui/fail/write_unit_escape_hatch.rs:9:24
